# DeathLogger

./: README.md
Addon/: DeathLogger.lua  DeathLogger.toc
Agent/: Cargo.toml
Agent/src/: config.example.toml  main.rs
