[package]
name = "deathlogger-agent"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
dirs = "5.0"
glob = "0.3"
mlua = { version = "0.9", features = ["lua54"] }
notify = { version = "6.1", default-features = false, features = ["crossbeam-channel", "macos_fsevent"] }
once_cell = "1.19"
path-absolutize = "3.1"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
walkdir = "2.5"
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
